--- a/src/main/resources/templates/Item Return/Create.html
+++ b/src/main/resources/templates/Item Return/Create.html
@@ -45,7 +45,8 @@
                                                                                                 min="1"
                                                                                                 name="Item ID"
                                                                                                 placeholder="Enter Item ID"
-                                                                                                required th:field="*{itemId}"
+                                                                                                required
+                                                                                                th:field="*{itemId}"
                                                                                                 type="number">
                             </div>
                             <div class="alert alert-danger"
